2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* data/gnome-lirc-properties.glade: Improve some mnemonics, fixing 
	bug #530349 (Wouter Bolsterlee).

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/net/services.py (post_file): Improve the logging, 
	so we see what URL is having a problem.

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* gnome_lirc_properties/net/services.py (post_file,
	RetrieveTarballThread._retrieve(): Document some exceptions that this 
	can throw.
	RetrieveTarballThread._retrieve_checksum(): Catch exceptions 
	separately so we can log more details.
	RetrieveTarballThread._retrieve_archive(): Catch HTTPException 
	as well as the existing exceptions, so we can catch BadStatusLine.
	Add some logging.

	This fixes the crash and hang in bug #529853, though it does not explain 
	why we have an error. (The .tar.gz file exists, but is of 0 size, which 
	should probably be OK.)

2008-04-29  Murray Cumming  <murrayc@murrayc.com>

	* data/gnome-lirc-properties.glade: Removed the <small></small> 
	device name label, because it is confusing to translators.
	This fixes bug #530348 (Wouter Bolsterlee).

2008-04-28  Murray Cumming  <murrayc@murrayc.com>

	* data/gnome-lirc-properties.glade: Marked gtk-* icon names as not 
	translatable.
	* gnome_lirc_properties/ui/RemoteControlProperties.py
	  RemoteControlProperties._unlock(): Put a message on one line so that 
	it doesn't appear as many broken sentences in the .po file.
	This fixes most of bug #530348 (Wouter Bolsterlee).

2008-04-28  Bastien Nocera  <hadess@hadess.net>

	* data/gnome-lirc-properties.desktop.in.in: Add details for bug-buddy
	to allow bug automatic bug filing (Closes: #530360)

2008-04-28  Mathias Hasselmann  <mathias@openismus.com>

	Try to restart key-listener when the lircd socket is closed.
	Should fix bug #529909.

	* gnome_lirc_properties/lirc.py (KeyListener.__init__(),
	  KeyListener.start(), KeyListener.stop(),